# claudes-c-compiler

./: .gitignore  Cargo.toml  DESIGN_DOC.md  README.md  build.sh  cclog1.txt  commit_classifications_cache.json  compiler_movie.html  extract_git_data.py  git_archaeology.py  git_log.txt  git_timeline_data.json  rebuild_movie_html.py  scaffolding.txt
completed_tasks/: caller_saved_register_allocation.txt  fix_builtin_constant_p_after_inline.txt  fix_int128_float_conversion.txt  fix_peephole_cmp_branch_store.txt  fix_static_const_init_and_parsing_const_leak.txt  unify_backend_codegen_duplication.txt
current_tasks/: add_dhrystone_test.txt  add_doomgeneric_verification.txt  add_i686_shared_library_linker.txt  add_missing_denorm_macros.txt  add_missing_sse_mmx_intrinsics.txt  add_missing_x86_sse_instructions.txt  add_sha1_intrinsics.txt  add_sse2_double_precision_intrinsics.txt  add_structured_diagnostics.txt  add_x86_io_port_instructions.txt  arm_asm_neon_instructions.txt  arm_kernel_boot_testing.txt  arm_native_linker.txt  arm_register_allocator_integration.txt  assembler_elf_writer_deduplication.txt  cache_cfg_analysis_across_passes.txt  clean_test_suite_with_reference_compilers.txt  cleanup_dead_code_suppressions.txt  cleanup_dedup_shims_and_expr_type.txt  cleanup_ideas_and_add_prioritized_ideas.txt  cleanup_if_same_then_else.txt  cleanup_peephole_dead_code_and_dedup.txt  cleanup_simplify_pass_dedup.txt  cleanup_unused_scripts_and_stale_locks.txt  compile_speed_flat_cfg.txt  consolidate_duplicated_ir_helpers.txt  ctype_struct_string_key.txt  dedup_long_double_parsing.txt  (+388 more)
(+283 files in other folders)
